--- a/index.html
+++ b/index.html
@@ -43,13 +43,21 @@
     .btn{display:inline-flex;align-items:center;justify-content:center;height:44px;padding:0 14px;border-radius:10px;border:1px solid var(--line);background:#fff;cursor:pointer}
     .btn.brand{background:var(--brand);border-color:var(--brand);color:#fff;font-weight:700}
 
-    /* ❌ 아이콘 전용 버튼 */
+    /* ❌ 아이콘 버튼: 테두리/배경 제거 + 얇은 검정 X */
     .icon-btn{
-      display:inline-flex;align-items:center;justify-content:center;
-      width:28px;height:28px;border:1px solid var(--line);
-      border-radius:8px;background:#fff;cursor:pointer;line-height:1;
+      position:relative;
+      width:24px;height:24px;
+      border:none;background:transparent;cursor:pointer;
+      padding:0;line-height:1;
     }
-    .icon-btn:hover{background:#fee2e2;border-color:#fecaca}
+    .icon-btn::before,.icon-btn::after{
+      content:"";position:absolute;left:50%;top:50%;
+      width:14px;height:1px;background:#0f172a;opacity:.85;transform-origin:center;
+    }
+    .icon-btn::before{ transform:translate(-50%,-50%) rotate(45deg); }
+    .icon-btn::after { transform:translate(-50%,-50%) rotate(-45deg); }
+    .icon-btn:hover::before,.icon-btn:hover::after{ opacity:1; }
+    .icon-btn:focus-visible{ outline:2px solid #cbd5e1; outline-offset:2px; border-radius:6px; }
 
     .muted{color:var(--sub)}
     .map{border:0;width:100%;height:280px;border-radius:12px}
@@ -108,7 +116,7 @@
     /* 게시글 리스트 */
     .gb-list{margin-top:18px;padding:0;list-style:none;display:grid;gap:10px}
     .gb-item{border:1px solid var(--line);border-radius:12px;padding:12px;background:#fff}
-    .gb-item .who{font-weight:700;margin:0 0 6px;display:flex;justify-content:space-between;gap:8px}
+    .gb-item .who{font-weight:700;margin:0 0 6px;display:flex;justify-content:space-between;gap:8px;align-items:center}
     .gb-item .txt{margin:0;color:#0f172a;line-height:1.6;white-space:pre-wrap}
     .gb-item .time{margin-top:6px;font-size:12px;color:#64748b}
 
@@ -304,6 +312,7 @@ END:VCALENDAR`;
     // ⬇⬇ 실제 값으로 교체 ⬇⬇
     const SUPABASE_URL = "https://khddckyznivjoluwtvxo.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtoZGRja3l6bml2am9sdXd0dnhvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI3MTk1NDYsImV4cCI6MjA3ODI5NTU0Nn0.zblwD4ETNzl1YlFBTfpqvxkvGPrE1RhawPLC9_iUxoE";
+
     // ⬆⬆ 실제 값으로 교체 ⬆⬆
 
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -326,7 +335,7 @@ END:VCALENDAR`;
       li.innerHTML = `
         <p class="who">
           <span>${name}</span>
-          <button class="icon-btn btn-delete" type="button" aria-label="Delete">❌</button>
+          <button class="icon-btn btn-delete" type="button" aria-label="Delete"></button>
         </p>
         <p class="txt">${safe}</p>
         <div class="time">${when.toLocaleString()}</div>
@@ -401,7 +410,7 @@ END:VCALENDAR`;
       }
     });
 
-    // 삭제(❌ 클릭 → PIN 입력 → RPC)
+    // 삭제(아이콘 클릭 → PIN 입력 → RPC)
     document.addEventListener('click', async (e)=>{
       const btn = e.target.closest('.btn-delete');
       if (!btn) return;
@@ -414,8 +423,6 @@ END:VCALENDAR`;
       if (!pin) return;
 
       btn.disabled = true;
-      const prevLabel = btn.textContent;
-      btn.textContent = '…';
 
       const { data, error } = await supabase.rpc('delete_guestbook_entry', {
         _id: id,
@@ -432,7 +439,6 @@ END:VCALENDAR`;
       }
 
       btn.disabled = false;
-      btn.textContent = prevLabel || '❌';
     });
 
     // 처음 로드 시 서버 글 표시
@@ -440,3 +446,5 @@ END:VCALENDAR`;
   </script>
 </body>
 </html>
+
+
