--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +7,7 @@
 
   <!-- OG -->
   <meta property="og:title" content="Wedding of Daniel & Diana" />
-  <meta property="og:description" content="2026.06.06 | [예식장/홀명]" />
+  <meta property="og:description" content="2026.06.06 | [Venue / Hall Name]" />
   <meta property="og:image" content="공개링크_청첩장메인사진.png" />
   <meta property="og:url" content="https://Diana101S.github.io/WeddingInvitation/" />
   <meta property="og:type" content="website" />
@@ -43,7 +43,7 @@
     .btn{display:inline-flex;align-items:center;justify-content:center;height:44px;padding:0 14px;border-radius:10px;border:1px solid var(--line);background:#fff;cursor:pointer}
     .btn.brand{background:var(--brand);border-color:var(--brand);color:#fff;font-weight:700}
 
-    /* ❌ 아이콘 버튼: 테두리/배경 제거 + 얇은 검정 X */
+    /* Icon button: borderless / transparent + thin black X */
     .icon-btn{
       position:relative;
       width:24px;height:24px;
@@ -113,7 +113,7 @@
     .gbook .msg.ok{color:#047857}
     .gbook .msg.err{color:#b91c1c}
 
-    /* 게시글 리스트 */
+    /* Guest book message list */
     .gb-list{margin-top:18px;padding:0;list-style:none;display:grid;gap:10px}
     .gb-item{border:1px solid var(--line);border-radius:12px;padding:12px;background:#fff}
     .gb-item .who{font-weight:700;margin:0 0 6px;display:flex;justify-content:space-between;gap:8px;align-items:center}
@@ -130,8 +130,8 @@
   <div class="wrap">
     <!-- HERO -->
     <header class="hero">
-      <img src="공개링크_청첩장메인사진.png?v=2" alt="커버 이미지" />
-      <div class="badge">2026.06.06 • [예식장]</div>
+      <img src="공개링크_청첩장메인사진.png?v=2" alt="Cover image" />
+      <div class="badge">2026.06.06 • [Venue]</div>
     </header>
 
     <!-- English invite -->
@@ -149,7 +149,7 @@
     <!-- Calendar -->
     <section class="section">
       <div class="calendar">
-        <img src="calendar.png" alt="June 2026 calendar with heart on 6th" />
+        <img src="calendar.png" alt="June 2026 calendar with a heart on the 6th" />
         <div class="cap">Save the Date — 2026.06.06</div>
       </div>
     </section>
@@ -160,18 +160,18 @@
         <p class="muted" style="margin:0 0 6px">When &amp; Where</p>
         <div class="grid two">
           <div>
-            <div class="muted">일시</div>
-            <h3 style="margin:6px 0 0">2026.06.06 (토) • 13:00</h3>
+            <div class="muted">Date &amp; Time</div>
+            <h3 style="margin:6px 0 0">2026.06.06 (Sat) • 13:00</h3>
           </div>
           <div>
-            <div class="muted">장소</div>
-            <h3 style="margin:6px 0 0">[GRAND BLANC 그랜드 블랑] [Mirabelle Garden 미라벨가든]</h3>
+            <div class="muted">Venue</div>
+            <h3 style="margin:6px 0 0">[GRAND BLANC] [Mirabelle Garden]</h3>
           </div>
         </div>
         <div style="height:12px"></div>
         <div class="grid two">
-          <a class="btn brand" id="btnAddCal" href="#">캘린더에 저장</a>
-          <a class="btn" target="_blank" rel="noopener" href="https://maps.google.com/?q=%EC%98%88%EC%8B%9D%EC%9E%A5">지도 열기</a>
+          <a class="btn brand" id="btnAddCal" href="#">Save to Calendar</a>
+          <a class="btn" target="_blank" rel="noopener" href="https://maps.google.com/?q=%EC%98%88%EC%8B%9D%EC%9E%A5">Open Map</a>
         </div>
       </div>
     </section>
@@ -187,7 +187,7 @@
             referrerpolicy="no-referrer-when-downgrade"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.6071287621585!2d129.12945411139236!3d35.166417572644185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7a3bb7249%3A0xaffba3b439d3a200!2z6re4656c65Oc67iU656RIOybqOuUqe2ZgA!5e0!3m2!1sko!2skr!4v1762822591444!5m2!1sko!2skr">
         </iframe>
-        <p class="muted" style="margin-top:8px">대중교통/주차 안내 등을 여기에 적어 주세요.</p>
+        <p class="muted" style="margin-top:8px">Please add details about public transportation and parking here.</p>
       </div>
     </section>
 
@@ -196,23 +196,23 @@
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Gallery</p>
         <div class="gallery">
-          <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=800&auto=format&fit=crop" alt="사진 1">
-          <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=800&auto=format&fit=crop" alt="사진 2">
-          <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=800&auto=format&fit=crop" alt="사진 3">
+          <img src="https://images.unsplash.com/photo-1522335789203-aabd1fc54bc9?q=80&w=800&auto=format&fit=crop" alt="Photo 1">
+          <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?q=80&w=800&auto=format&fit=crop" alt="Photo 2">
+          <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=800&auto=format&fit=crop" alt="Photo 3">
         </div>
       </div>
     </section>
 
-    <!-- Account Info (선택) -->
+    <!-- Account Info (optional) -->
     <section class="section">
       <div class="card">
-        <p class="muted" style="margin:0 0 6px">Account Info (선택)</p>
+        <p class="muted" style="margin:0 0 6px">Account Info (optional)</p>
         <ul class="list" style="list-style:none;padding:0;margin:12px 0 0">
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0">
-            <span>신랑측</span><strong>OO은행 123-456-789012 (홍길동)</strong>
+            <span>Groom’s side</span><strong>OO Bank 123-456-789012 (Hong Gil-dong)</strong>
           </li>
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0;border-top:1px dashed var(--line)">
-            <span>신부측</span><strong>OO은행 987-654-321098 (김민지)</strong>
+            <span>Bride’s side</span><strong>OO Bank 987-654-321098 (Kim Min-ji)</strong>
           </li>
         </ul>
       </div>
@@ -248,11 +248,11 @@
         <p id="gbErr" class="msg err" hidden>Something went wrong. Please try again.</p>
       </form>
 
-      <!-- 메시지 리스트 -->
+      <!-- Message list -->
       <ul id="gbList" class="gb-list"></ul>
     </section>
 
-    <!-- RSVP 버튼 -->
+    <!-- RSVP button -->
     <section class="section" id="rsvp-cta">
       <div class="card" style="text-align:center">
         <a class="btn brand" href="./rsvp.html">Open RSVP Form</a>
@@ -262,35 +262,39 @@
     <!-- Sticky share -->
     <div class="sticky-share">
       <div class="bar">
-        <button class="btn" id="btnCopy">링크 복사</button>
-        <a class="btn brand" href="#top">맨 위로</a>
+        <button class="btn" id="btnCopy">Copy Link</button>
+        <a class="btn brand" href="#top">Back to Top</a>
       </div>
     </div>
 
     <footer class="footer">
-      <div>감사합니다. 안전하게 오세요 🙏</div>
-      <div class="disclaimer">여기 문구 가능</div>
+      <div>Thank you. Have a safe trip 🙏</div>
+      <div class="disclaimer">Optional footer text can go here.</div>
     </footer>
   </div>
 
   <script>
-    // 링크 복사
+    // Copy link
     document.getElementById('btnCopy').addEventListener('click', async () => {
-      try { await navigator.clipboard.writeText(location.href); alert('링크 복사 완료'); }
-      catch { alert('복사 실패. 주소를 길게 눌러 복사해 주세요.'); }
+      try {
+        await navigator.clipboard.writeText(location.href);
+        alert('Link copied!');
+      } catch {
+        alert('Copy failed. Please press and hold the address to copy it.');
+      }
     });
 
-    // 캘린더(ICS)
+    // Calendar (ICS)
     document.getElementById('btnAddCal')?.addEventListener('click', () => {
       const title='Wedding of Daniel & Diana';
       const start=new Date(2026,5,6,13,30);
       const end=new Date(2026,5,6,15,30);
-      const loc='[예식장/홀명]';
+      const loc='[Venue / Hall Name]';
       const pad=n=>String(n).padStart(2,'0');
       const toICS=d=>`${d.getFullYear()}${pad(d.getMonth()+1)}${pad(d.getDate())}T${pad(d.getHours())}${pad(d.getMinutes())}00`;
       const ics=`BEGIN:VCALENDAR
 VERSION:2.0
-PRODID:-//Mobile Invitation//KO
+PRODID:-//Mobile Invitation//EN
 BEGIN:VEVENT
 UID:${Date.now()}@inv
 DTSTAMP:${toICS(new Date())}
@@ -305,15 +309,15 @@ END:VCALENDAR`;
     });
   </script>
 
-  <!-- Supabase Guest Book: 저장 + 삭제 + 새로고침 로드 -->
+  <!-- Supabase Guest Book: save + delete + load on refresh -->
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
-    // ⬇⬇ 실제 값으로 교체 ⬇⬇
+    // ⬇⬇ Replace with your actual values ⬇⬇
     const SUPABASE_URL = "https://khddckyznivjoluwtvxo.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtoZGRja3l6bml2am9sdXd0dnhvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI3MTk1NDYsImV4cCI6MjA3ODI5NTU0Nn0.zblwD4ETNzl1YlFBTfpqvxkvGPrE1RhawPLC9_iUxoE";
 
-    // ⬆⬆ 실제 값으로 교체 ⬆⬆
+    // ⬆⬆ Replace with your actual values ⬆⬆
 
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -325,7 +329,7 @@ END:VCALENDAR`;
 
     const listEl = document.getElementById('gbList');
 
-    // 메시지 카드 렌더러(❌ 아이콘 삭제 버튼 포함)
+    // Message card renderer (with delete icon button)
     function prependMessage({id, name, message, created_at}){
       const li = document.createElement('li');
       li.className = 'gb-item';
@@ -343,7 +347,7 @@ END:VCALENDAR`;
       listEl.prepend(li);
     }
 
-    // 초기 로드: 서버에서 최근 글 가져오기 (읽기용 RPC)
+    // Initial load: fetch recent messages from the server (read-only RPC)
     async function loadLatest(limit=30){
       const { data, error } = await supabase.rpc('list_guestbook', { limit_count: limit });
       if (error) {
@@ -359,7 +363,7 @@ END:VCALENDAR`;
     const ok   = document.getElementById('gbOk');
     const err  = document.getElementById('gbErr');
 
-    // 제출 → 삽입(클라 UUID) → 즉시 렌더
+    // Submit → insert (client UUID) → render immediately
     form?.addEventListener('submit', async (e)=>{
       e.preventDefault();
       ok.hidden = true; err.hidden = true;
@@ -369,15 +373,15 @@ END:VCALENDAR`;
       const msg  = document.getElementById('gb_message').value.trim();
 
       if(!name || !pin || !msg){
-        err.textContent = "모든 항목을 입력해 주세요.";
+        err.textContent = "Please fill in all fields.";
         err.hidden = false; return;
       }
       if(pin.length < 4 || pin.length > 6){
-        err.textContent = "비밀번호는 4~6자리로 입력해 주세요.";
+        err.textContent = "Passcode must be 4–6 digits.";
         err.hidden = false; return;
       }
 
-      btn.disabled = true; btn.textContent = "전송 중…";
+      btn.disabled = true; btn.textContent = "Sending…";
 
       try{
         const pin_hash = await sha256(pin);
@@ -389,7 +393,7 @@ END:VCALENDAR`;
 
         if (error) {
           console.error(error);
-          err.textContent = "오류가 발생했습니다. 다시 시도해 주세요.";
+          err.textContent = "An error occurred. Please try again.";
           err.hidden = false;
         } else {
           prependMessage({
@@ -403,21 +407,21 @@ END:VCALENDAR`;
         }
       }catch(e2){
         console.error(e2);
-        err.textContent = "오류가 발생했습니다. 다시 시도해 주세요.";
+        err.textContent = "An error occurred. Please try again.";
         err.hidden = false;
       }finally{
         btn.disabled = false; btn.textContent = "Leave a Message";
       }
     });
 
-    // 삭제(아이콘 클릭 → PIN 입력 → RPC)
+    // Delete (click icon → enter PIN → RPC)
     document.addEventListener('click', async (e)=>{
       const btn = e.target.closest('.btn-delete');
       if (!btn) return;
 
       const li = btn.closest('.gb-item');
       const id = li?.dataset?.id;
-      if (!id) { alert('삭제 ID가 없습니다.'); return; }
+      if (!id) { alert('No message ID found.'); return; }
 
       const pin = prompt('Enter your passcode to delete this message');
       if (!pin) return;
@@ -441,10 +445,8 @@ END:VCALENDAR`;
       btn.disabled = false;
     });
 
-    // 처음 로드 시 서버 글 표시
+    // Load messages on first render
     loadLatest();
   </script>
 </body>
 </html>
-
-
