--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" /> 
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wedding of Daniel & Diana</title>
 
@@ -25,8 +25,10 @@
       --maxw:720px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);
-      font-family:Pretendard,system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,sans-serif}
+    html,body{
+      margin:0;padding:0;background:var(--bg);color:var(--ink);
+      font-family:Pretendard,system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,sans-serif
+    }
     img{max-width:100%;display:block}
     a{color:inherit;text-decoration:none}
     .wrap{max-width:var(--maxw);margin:0 auto}
@@ -34,13 +36,24 @@
     /* HERO */
     .hero{position:relative}
     .hero img{width:100%;height:auto}
-    .badge{position:absolute;right:16px;bottom:16px;background:#ffffffdd;color:var(--ink);padding:8px 12px;border-radius:999px;font-weight:600;font-size:14px;backdrop-filter:saturate(180%) blur(6px)}
+    .badge{
+      position:absolute;right:16px;bottom:16px;
+      background:#ffffffdd;color:var(--ink);
+      padding:8px 12px;border-radius:999px;
+      font-weight:600;font-size:14px;
+      backdrop-filter:saturate(180%) blur(6px)
+    }
 
     /* Layout */
     .section{padding:28px 16px}
 
     /* Buttons */
-    .btn{display:inline-flex;align-items:center;justify-content:center;height:44px;padding:0 14px;border-radius:10px;border:1px solid var(--line);background:#fff;cursor:pointer}
+    .btn{
+      display:inline-flex;align-items:center;justify-content:center;
+      height:44px;padding:0 14px;
+      border-radius:10px;border:1px solid var(--line);
+      background:#fff;cursor:pointer
+    }
     .btn.brand{background:var(--brand);border-color:var(--brand);color:#fff;font-weight:700}
 
     /* Icon button: borderless / transparent + thin black X */
@@ -57,7 +70,9 @@
     .icon-btn::before{ transform:translate(-50%,-50%) rotate(45deg); }
     .icon-btn::after { transform:translate(-50%,-50%) rotate(-45deg); }
     .icon-btn:hover::before,.icon-btn:hover::after{ opacity:1; }
-    .icon-btn:focus-visible{ outline:2px solid #cbd5e1; outline-offset:2px; border-radius:6px; }
+    .icon-btn:focus-visible{
+      outline:2px solid #cbd5e1; outline-offset:2px; border-radius:6px;
+    }
 
     .muted{color:var(--sub)}
     .map{border:0;width:100%;height:280px;border-radius:12px}
@@ -66,25 +81,40 @@
     .eng-invite{padding:20px 0}
     .eng-invite .inv-label{
       font-family:"Playfair Display", serif;color:var(--gold);letter-spacing:.28em;
-      text-transform:uppercase;font-weight:700;text-align:center;font-size:clamp(13px,2vw,16px);margin:0 0 18px;
+      text-transform:uppercase;font-weight:700;text-align:center;
+      font-size:clamp(13px,2vw,16px);margin:0 0 18px;
     }
     .eng-invite .headline{
       font-family:"Playfair Display", serif;font-weight:700;letter-spacing:.18em;text-transform:uppercase;
-      color:#999; font-size:clamp(14px,2.3vw,18px);margin:0 0 24px;text-align:center
+      color:#999;font-size:clamp(14px,2.3vw,18px);margin:0 0 24px;text-align:center
     }
     .eng-invite .line-1{
-      font-family:"Playfair Display", serif;font-weight:700;font-size:clamp(18px,3.8vw,32px);
-      letter-spacing:.12em;line-height:1.5;margin:0 0 18px;text-align:center;color:var(--ink)
+      font-family:"Playfair Display", serif;font-weight:700;
+      font-size:clamp(18px,3.8vw,32px);
+      letter-spacing:.12em;line-height:1.5;margin:0 0 18px;
+      text-align:center;color:var(--ink)
     }
     .eng-invite .line-2{
       font-family:"Inter", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, sans-serif;
-      font-size:clamp(16px,2.6vw,19px);line-height:1.9;letter-spacing:.02em;margin:0;text-align:center;color:var(--ink)
+      font-size:clamp(16px,2.6vw,19px);line-height:1.9;letter-spacing:.02em;
+      margin:0;text-align:center;color:var(--ink)
     }
-    .orn{position:relative;height:28px;margin:0 auto 28px;width:min(360px,70%);opacity:.95}
-    .orn::before,.orn::after{content:"";position:absolute;top:50%;height:1px;width:40%;background:linear-gradient(90deg,transparent,var(--rule));transform:translateY(-50%)}
+    .orn{
+      position:relative;height:28px;margin:0 auto 28px;
+      width:min(360px,70%);opacity:.95
+    }
+    .orn::before,.orn::after{
+      content:"";position:absolute;top:50%;height:1px;width:40%;
+      background:linear-gradient(90deg,transparent,var(--rule));
+      transform:translateY(-50%);
+    }
     .orn::before{left:0}
     .orn::after{right:0;background:linear-gradient(90deg,var(--rule),transparent)}
-    .orn .dot{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:8px;height:8px;background:var(--accent);border-radius:2px;box-shadow:0 0 0 4px rgba(233,200,155,.15)}
+    .orn .dot{
+      position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
+      width:8px;height:8px;background:var(--accent);border-radius:2px;
+      box-shadow:0 0 0 4px rgba(233,200,155,.15)
+    }
 
     /* Grid */
     .card{background:transparent;border:none;padding:0}
@@ -102,8 +132,11 @@
       gap:8px;
       grid-template-columns:repeat(3,1fr);
     }
-    .gallery a{
-      display:block;
+    .gallery button{
+      padding:0;
+      border:none;
+      background:transparent;
+      cursor:pointer;
       border-radius:8px;
       overflow:hidden;
     }
@@ -114,6 +147,61 @@
       border-radius:8px;
     }
 
+    /* Lightbox */
+    .lightbox{
+      position:fixed;
+      inset:0;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      z-index:50;
+    }
+    .lightbox[hidden]{display:none;}
+    .lightbox-backdrop{
+      position:absolute;
+      inset:0;
+      background:rgba(15,23,42,0.75);
+    }
+    .lightbox-content{
+      position:relative;
+      z-index:1;
+      max-width:min(1024px,94vw);
+      max-height:90vh;
+      padding:8px;
+      border-radius:18px;
+      background:#000;
+      box-shadow:0 20px 40px rgba(15,23,42,0.6);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .lightbox-content img{
+      max-width:100%;
+      max-height:86vh;
+      border-radius:12px;
+    }
+    .lightbox-close{
+      position:absolute;
+      top:8px;
+      right:12px;
+      width:32px;
+      height:32px;
+      border-radius:999px;
+      border:none;
+      background:rgba(15,23,42,0.7);
+      color:#e5e7eb;
+      font-size:22px;
+      line-height:1;
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .lightbox-close:hover{
+      background:rgba(15,23,42,0.95);
+      color:#fff;
+    }
+
     /* Guest Book */
     .gbook { padding: 28px 16px; }
     .gbook .gb-title{
@@ -122,22 +210,46 @@
     }
     .gbook .form{display:grid;gap:12px;max-width:var(--maxw);margin:0 auto;}
     .gbook .field{display:grid;gap:6px}
-    .gbook input,.gbook textarea{width:100%;padding:12px;border:1px solid var(--line);border-radius:10px;background:#fff;font-size:16px}
+    .gbook input,.gbook textarea{
+      width:100%;padding:12px;border:1px solid var(--line);
+      border-radius:10px;background:#fff;font-size:16px
+    }
     .gbook .msg{margin-top:10px;font-size:14px}
     .gbook .msg.ok{color:#047857}
     .gbook .msg.err{color:#b91c1c}
 
     /* Guest book message list */
-    .gb-list{margin-top:18px;padding:0;list-style:none;display:grid;gap:10px}
-    .gb-item{border:1px solid var(--line);border-radius:12px;padding:12px;background:#fff}
-    .gb-item .who{font-weight:700;margin:0 0 6px;display:flex;justify-content:space-between;gap:8px;align-items:center}
-    .gb-item .txt{margin:0;color:#0f172a;line-height:1.6;white-space:pre-wrap}
-    .gb-item .time{margin-top:6px;font-size:12px;color:#64748b}
+    .gb-list{
+      margin-top:18px;padding:0;list-style:none;
+      display:grid;gap:10px
+    }
+    .gb-item{
+      border:1px solid var(--line);border-radius:12px;
+      padding:12px;background:#fff
+    }
+    .gb-item .who{
+      font-weight:700;margin:0 0 6px;
+      display:flex;justify-content:space-between;gap:8px;align-items:center
+    }
+    .gb-item .txt{
+      margin:0;color:#0f172a;
+      line-height:1.6;white-space:pre-wrap
+    }
+    .gb-item .time{
+      margin-top:6px;font-size:12px;color:#64748b
+    }
 
     .footer{padding:40px 16px 80px;color:#475569;text-align:center}
     .disclaimer{font-size:12px;color:#64748b;margin-top:16px}
-    .sticky-share{position:sticky;bottom:0;background:#ffffffcc;border-top:1px solid var(--line);backdrop-filter:saturate(180%) blur(6px)}
-    .sticky-share .bar{max-width:var(--maxw);margin:0 auto;display:flex;gap:8px;padding:10px 12px}
+    .sticky-share{
+      position:sticky;bottom:0;
+      background:#ffffffcc;border-top:1px solid var(--line);
+      backdrop-filter:saturate(180%) blur(6px)
+    }
+    .sticky-share .bar{
+      max-width:var(--maxw);margin:0 auto;
+      display:flex;gap:8px;padding:10px 12px
+    }
   </style>
 </head>
 <body>
@@ -155,7 +267,10 @@
         <div class="orn" aria-hidden="true"><span class="dot"></span></div>
         <p class="headline">You’re invited to celebrate with us.</p>
         <h2 class="line-1">Years of love brought us here.</h2>
-        <p class="line-2">Today, we’re celebrating in <strong>Busan, South Korea</strong> on <strong>June 6, 2026</strong>.</p>
+        <p class="line-2">
+          Today, we’re celebrating in <strong>Busan, South Korea</strong>
+          on <strong>June 6, 2026</strong>.
+        </p>
         <div class="orn" style="margin:28px auto 0" aria-hidden="true"><span class="dot"></span></div>
       </div>
     </section>
@@ -195,13 +310,15 @@
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Directions</p>
         <iframe
-            class="map"
-            loading="lazy"
-            allowfullscreen
-            referrerpolicy="no-referrer-when-downgrade"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.6071287621585!2d129.12945411139236!3d35.166417572644185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7a3bb7249%3A0xaffba3b439d3a200!2z6re4656c65Oc67iU656RIOybqOuUqe2ZgA!5e0!3m2!1sko!2skr!4v1762822591444!5m2!1sko!2skr">
+          class="map"
+          loading="lazy"
+          allowfullscreen
+          referrerpolicy="no-referrer-when-downgrade"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.6071287621585!2d129.12945411139236!3d35.166417572644185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c7a3bb7249%3A0xaffba3b439d3a200!2z6re4656c65Oc67iU656RIOybqOuUqe2ZgA!5e0!3m2!1sko!2skr!4v1762822591444!5m2!1sko!2skr">
         </iframe>
-        <p class="muted" style="margin-top:8px">Please add details about public transportation and parking here.</p>
+        <p class="muted" style="margin-top:8px">
+          Please add details about public transportation and parking here.
+        </p>
       </div>
     </section>
 
@@ -210,39 +327,48 @@
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Gallery</p>
         <div class="gallery">
-          <a href="1.jpg" target="_blank" rel="noopener">
+          <button type="button" data-img="1.jpg" aria-label="Open photo 1">
             <img src="1.jpg" alt="Wedding photo 1">
-          </a>
-          <a href="2.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="2.jpg" aria-label="Open photo 2">
             <img src="2.jpg" alt="Wedding photo 2">
-          </a>
-          <a href="3.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="3.jpg" aria-label="Open photo 3">
             <img src="3.jpg" alt="Wedding photo 3">
-          </a>
-          <a href="4.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="4.jpg" aria-label="Open photo 4">
             <img src="4.jpg" alt="Wedding photo 4">
-          </a>
-          <a href="5.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="5.jpg" aria-label="Open photo 5">
             <img src="5.jpg" alt="Wedding photo 5">
-          </a>
-          <a href="6.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="6.jpg" aria-label="Open photo 6">
             <img src="6.jpg" alt="Wedding photo 6">
-          </a>
-          <a href="7.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="7.jpg" aria-label="Open photo 7">
             <img src="7.jpg" alt="Wedding photo 7">
-          </a>
-          <a href="8.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="8.jpg" aria-label="Open photo 8">
             <img src="8.jpg" alt="Wedding photo 8">
-          </a>
-          <a href="9.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="9.jpg" aria-label="Open photo 9">
             <img src="9.jpg" alt="Wedding photo 9">
-          </a>
-          <a href="10.jpg" target="_blank" rel="noopener">
+          </button>
+          <button type="button" data-img="10.jpg" aria-label="Open photo 10">
             <img src="10.jpg" alt="Wedding photo 10">
-          </a>
+          </button>
         </div>
       </div>
     </section>
+
+    <!-- Lightbox modal -->
+    <div id="lightbox" class="lightbox" hidden>
+      <div class="lightbox-backdrop"></div>
+      <div class="lightbox-content" role="dialog" aria-modal="true" aria-label="Photo viewer">
+        <button class="lightbox-close" type="button" aria-label="Close">&times;</button>
+        <img id="lightboxImg" src="" alt="Wedding photo enlarged">
+      </div>
+    </div>
 
     <!-- Account Info (optional) -->
     <section class="section">
@@ -250,10 +376,12 @@
         <p class="muted" style="margin:0 0 6px">Account Info (optional)</p>
         <ul class="list" style="list-style:none;padding:0;margin:12px 0 0">
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0">
-            <span>Groom’s side</span><strong>OO Bank 123-456-789012 (Hong Gil-dong)</strong>
+            <span>Groom’s side</span>
+            <strong>OO Bank 123-456-789012 (Daniel Root)</strong>
           </li>
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0;border-top:1px dashed var(--line)">
-            <span>Bride’s side</span><strong>OO Bank 987-654-321098 (Kim Min-ji)</strong>
+            <span>Bride’s side</span>
+            <strong>OO Bank 987-654-321098 (Dahee Sung</strong>
           </li>
         </ul>
       </div>
@@ -348,6 +476,44 @@ END:VCALENDAR`;
       const blob=new Blob([ics],{type:'text/calendar'}); const url=URL.createObjectURL(blob);
       const a=document.createElement('a'); a.href=url; a.download='wedding-invite.ics'; a.click(); URL.revokeObjectURL(url);
     });
+
+    // Lightbox for gallery
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightboxImg');
+    const lightboxClose = document.querySelector('.lightbox-close');
+
+    function openLightbox(src){
+      if (!lightbox || !lightboxImg || !src) return;
+      lightboxImg.src = src;
+      lightbox.removeAttribute('hidden');
+    }
+
+    function closeLightbox(){
+      if (!lightbox || !lightboxImg) return;
+      lightbox.setAttribute('hidden','');
+      lightboxImg.src = '';
+    }
+
+    document.querySelectorAll('.gallery [data-img]').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const src = btn.getAttribute('data-img');
+        openLightbox(src);
+      });
+    });
+
+    lightboxClose?.addEventListener('click', closeLightbox);
+
+    lightbox?.addEventListener('click', (e)=>{
+      if (e.target === lightbox || e.target.classList.contains('lightbox-backdrop')) {
+        closeLightbox();
+      }
+    });
+
+    document.addEventListener('keydown', (e)=>{
+      if (e.key === 'Escape' && lightbox && !lightbox.hasAttribute('hidden')) {
+        closeLightbox();
+      }
+    });
   </script>
 
   <!-- Supabase Guest Book: save + delete + load on refresh -->
@@ -357,7 +523,6 @@ END:VCALENDAR`;
     // ⬇⬇ Replace with your actual values ⬇⬇
     const SUPABASE_URL = "https://khddckyznivjoluwtvxo.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtoZGRja3l6bml2am9sdXd0dnhvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI3MTk1NDYsImV4cCI6MjA3ODI5NTU0Nn0.zblwD4ETNzl1YlFBTfpqvxkvGPrE1RhawPLC9_iUxoE";
-
     // ⬆⬆ Replace with your actual values ⬆⬆
 
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
