--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
         <ul class="list" style="list-style:none;padding:0;margin:12px 0 0">
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0">
             <span>Groom’s side</span>
-            <strong>OO Bank 123-456-789012 (Daniel Root)</strong>
+            <strong>OO Bank 123-456-789012 (Hong Gil-dong)</strong>
           </li>
           <li class="kv" style="display:flex;justify-content:space-between;gap:12px;padding:8px 0;border-top:1px dashed var(--line)">
             <span>Bride’s side</span>
-            <strong>OO Bank 987-654-321098 (Dahee Sung</strong>
+            <strong>OO Bank 987-654-321098 (Kim Min-ji)</strong>
           </li>
         </ul>
       </div>
