--- a/index.html
+++ b/index.html
@@ -675,39 +675,40 @@ END:VCALENDAR`;
     });
 
     // Hero cherry blossom petals
-    (function makePetals(){
-      const container = document.getElementById('petal-layer');
-      if (!container) return;
-
-      const COUNT = 28; // 벚꽃 개수 (원하면 20~40 사이로 조절)
-
-      for (let i = 0; i < COUNT; i++) {
-        const p = document.createElement('div');
-        p.className = 'petal';
-
-        // 가로 위치
-        p.style.left = (Math.random() * 100) + '%';
-
-        // 크기 (0.7 ~ 1.2배)
-        const scale = (Math.random() * 0.5 + 0.7).toFixed(2);
-        p.style.setProperty('--scale', scale);
-
-        // 좌우로 흘러가는 정도 (-40% ~ 40%)
-        const drift = (Math.random() * 80 - 40).toFixed(1);
-        p.style.setProperty('--x-move', drift + '%');
-
-        // 떨어지는 속도 (12 ~ 22초)
-        p.style.animationDuration = (Math.random() * 10 + 12) + 's';
-
-        // 시작 타이밍 (이미 중간에 떨어지는 것처럼 보이도록 음수 딜레이)
-        p.style.animationDelay = (Math.random() * -20) + 's';
-
-        // 투명도
-        p.style.opacity = (Math.random() * 0.4 + 0.6).toFixed(2);
-
-        container.appendChild(p);
-      }
-    })();
+// Hero cherry blossom petals
+  (function makePetals(){
+    const container = document.getElementById('petal-layer');
+    if (!container) return;
+  
+    const COUNT = 40; // 벚꽃 개수 (조금 늘림)
+  
+    for (let i = 0; i < COUNT; i++) {
+      const p = document.createElement('div');
+      p.className = 'petal';
+  
+      // 가로 시작 위치 (0~100vw)
+      p.style.left = (Math.random() * 100) + 'vw';
+  
+      // 크기 (0.7 ~ 1.3배)
+      const scale = (Math.random() * 0.6 + 0.7).toFixed(2);
+      p.style.setProperty('--scale', scale);
+  
+      // 좌우로 흘러가는 정도 (-30vw ~ 30vw)
+      const drift = (Math.random() * 60 - 30).toFixed(1);
+      p.style.setProperty('--x-move', drift + 'vw');
+  
+      // 떨어지는 속도 (10 ~ 20초)
+      p.style.animationDuration = (Math.random() * 10 + 10) + 's';
+  
+      // 시작 타이밍 (이미 중간부터 떨어지는 것처럼 보이게 음수 딜레이)
+      p.style.animationDelay = (Math.random() * -20) + 's';
+  
+      // 투명도
+      p.style.opacity = (Math.random() * 0.4 + 0.6).toFixed(2);
+  
+      container.appendChild(p);
+    }
+  })();
   </script>
 
   <!-- Supabase Guest Book -->
