--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- OG -->
   <meta property="og:title" content="Wedding of Daniel & Diana" />
-  <meta property="og:description" content="2026.06.06 | [Venue / Hall Name]" />
+  <!-- <meta property="og:description" content="2026.06.06 | [Venue / Hall Name]" /> -->
   <meta property="og:image" content="공개링크_청첩장메인사진.png" />
   <meta property="og:url" content="https://Diana101S.github.io/WeddingInvitation/" />
   <meta property="og:type" content="website" />
